criação do projeto web site

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>projeto web site carlos</title>
 </head>
 <body>
-    
+    <h1>website projeto front end e back end</h1>
+    <h2>w</h2>
 </body>
 </html>
