--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>website projeto front end e back end</h1>
-    <h2>w</h2>
+    <h2>site de compartilhamento </h2>
+    <p>wow</p>
+    <p></p>
+    <p></p>
 </body>
 </html>
