--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 <body>
     <h1>website projeto front end e back end</h1>
     <h2>site de compartilhamento </h2>
-    <p>wow</p>
-    <p></p>
+    <p>quero fzer um ite de informação, igual ao wikipedia por exemplo</p>
     <p></p>
 </body>
 </html>
