--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 </head>
 <body>
     <h1>website projeto front end e back end</h1>
-    <h2>site de compartilhamento </h2>
-    <p>quero fzer um ite de informacao, igual ao wikipedia por exemplo</p>
+    <h2>site de inf </h2>
     <p></p>
+    <p></p>
+    <p>ite de informacao</p>
 </body>
 </html>
