--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <h2>site de inf </h2>
     <p>pppp</p>
     <p></p>
-    <p>ite de informacao</p>
+    <p>site de informacao</p>
 </body>
 </html>
