--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <h1>website projeto front end e back end</h1>
-    <h2>site de inf </h2>
+    <h2>site de informacao </h2>
     <p>pppp</p>
     <p></p>
-    <p>site de informacao</p>
+
 </body>
 </html>
