--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>website projeto front end e back end</h1>
-    <h2>site de informacao </h2>
+    <h2>site de informação </h2>
     <p></p>
     <p></p>
 
