--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>website projeto front end e back end</h1>
     <h2>site de informação </h2>
-    <p></p>
+    <p>a ideia desse projeto web é fazer um site com informações diversas sobre coisas, experiências, relatos, desde curiosidades úteis e inuteis, feito por voluntarios, qualquer pessoa que deseje informar </p>
     <p></p>
 
 </body>
