--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <p>A ideia desse projeto web é fazer um site com informações diversas sobre coisas, experiências,
         <br> relatos, desde curiosidades úteis e inuteis, feito por voluntarios.
         <br> qualquer pessoa que deseje informar, também seria interesssante ter um 
-        <br> chat para as pessoas conversarem, debaterem, discutir ideias</p>
+        <br> chat para as pessoas conversarem, debaterem, discutir ideias
+    <br> <p>o objetivo é ser um site web socialvel</p></p>
     <p></p>
 <b></b>
 </body>
