--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <br> relatos, desde curiosidades úteis e inuteis, feito por voluntarios.
         <br> qualquer pessoa que deseje informar, também seria interesssante ter um 
         <br> chat para as pessoas conversarem, debaterem, discutir ideias
-    <br> <p>o objetivo é ser um site web socialvel</p></p>
+    <br> <p>o objetivo é ser um site web socialvel, com restrição de idade para fins...continua.</p></p>
     <p></p>
 <b></b>
 </body>
